--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,7 +2,7 @@
 @import "global";
 @import "fonts";
 
-// START HEADER
+//   START HEADER
 
 .header__top-inner {
   display: flex;
@@ -53,8 +53,8 @@
   }
 }
 
-// END HEADER
-// START SEARCH
+//   END HEADER
+//   START SEARCH
 
 .search {
   @include bgp;
@@ -106,8 +106,8 @@
   }
 }
 
-// END SEARCH
-// START PRODUCTS
+//   END SEARCH
+//   START PRODUCTS
 
 .products {
   padding: 110px 0;
@@ -221,8 +221,8 @@
   }
 }
 
-// END PRODUCTS
-//START PRODUCT-SLIDER
+//   END PRODUCTS
+//   START PRODUCT-SLIDER
 
 .product-slider {
   padding: 110px 0 120px;
@@ -252,8 +252,8 @@
   }
 }
 
-//END PRODUCT-SLIDER
-//START ADVANTAGES
+//   END PRODUCT-SLIDER
+//   START ADVANTAGES
 
 .advantages {
   background-color: $bg;
@@ -307,8 +307,8 @@
   }
 }
 
-//END ADVANTAGES
-//START SECTION AUTHOR
+//   END ADVANTAGES
+//   START SECTION AUTHOR
 
 .author {
   @include bgp;
@@ -343,8 +343,8 @@
   }
 }
 
-//END SECTION AUTHOR
-//START SECTION TUTORIAL
+//   END SECTION AUTHOR
+//   START SECTION TUTORIAL
 
 .tutorial {
   padding: 70px 0 120px;
@@ -373,4 +373,155 @@
   }
 }
 
-//END SECTION TUTORIAL
+//   END SECTION TUTORIAL
+//   START FOOTER
+
+.footer {
+  background-color: $bg;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    padding: 100px 0 80px;
+  }
+}
+.footer__copy {
+  border-top: 1px solid #424d53;
+
+  &-text {
+    text-align: center;
+    font-size: 15px;
+    color: #919699;
+    padding: 25px 0;
+  }
+}
+.footer__col {
+  max-width: 270px;
+  width: 100%;
+  &-menu {
+    max-width: 220px;
+  }
+  &-title {
+    font-size: 22px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: #fff;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 2px;
+      width: 51px;
+      height: 3px;
+      background-color: $green;
+    }
+  }
+  &-text {
+    color: #b7c3c8;
+    margin-bottom: 30px;
+  }
+}
+.footer__info {
+  margin-top: 18px;
+  @include f500;
+  color: #fff;
+  padding-left: 30px;
+  position: relative;
+  &::before {
+    content: "\f041";
+    font-family: "icomoon";
+    color: $green;
+    font-size: 18px;
+    position: absolute;
+    left: 0;
+  }
+}
+.footer__info-phone {
+  &::before {
+    content: "\f095";
+  }
+}
+.footer__col-list {
+  a {
+    margin-bottom: 12px;
+    color: #b7c3c8;
+    padding-left: 22px;
+    position: relative;
+    &::before {
+      content: "\f105";
+      font-family: "icomoon";
+      color: $green;
+      font-size: 18px;
+      position: absolute;
+      left: 0;
+    }
+  }
+}
+
+.footer__cosial-link {
+  margin-bottom: 33px;
+  li {
+    display: inline-block;
+  }
+  a {
+    width: 28px;
+    height: 28px;
+    background-image: url(../images/css_sprites.png);
+    & + a {
+      margin-left: 7px;
+    }
+  }
+}
+.link-twitter {
+  background-position: -28px 0;
+}
+.link-youtube {
+  background-position: 0 -28px;
+}
+.link-pinterest {
+  background-position: -28px -28px;
+}
+.link-linledin {
+  background-position: -56px 0;
+}
+.footer__form-title {
+  margin-bottom: 15px;
+  color: #fff;
+  font-size: 20px;
+}
+.footer__form {
+  position: relative;
+  input {
+    border: none;
+    background-color: #2f3c43;
+    display: block;
+    width: 100%;
+    height: 40px;
+    color: #fff;
+    font-size: 14px;
+    padding-left: 13px;
+    padding-right: 50px;
+    &::placeholder {
+      color: #697378;
+    }
+  }
+  button {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: $green;
+    border: none;
+    height: 40px;
+    width: 43px;
+    cursor: pointer;
+    &::before {
+      content: "\f124";
+      font-family: "icomoon";
+      color: #fff;
+      font-size: 20px;
+    }
+  }
+}
+//   END FOOTER
