--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,6 +28,7 @@ body {
   font-size: 15px;
   line-height: 24px;
   color: $text;
+  overflow-x: hidden;
 }
 .wrapper {
   display: flex;
@@ -99,5 +100,17 @@ body {
     a {
       color: #b0bec5;
     }
+  }
+}
+.angle-right{
+  position: relative;
+  padding-left: 15px;
+  &::before{
+    content: "\f105";
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+    color: $green;
+    font-size: 14px;
   }
 }
