--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,6 +10,8 @@ html {
 html,
 body {
   height: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 a {
   display: inline-block;
@@ -28,7 +30,6 @@ body {
   font-size: 15px;
   line-height: 24px;
   color: $text;
-  overflow-x: hidden;
 }
 .wrapper {
   display: flex;
@@ -58,7 +59,7 @@ body {
     padding: 0 15px;
   }
 }
-.page-content{
+.page-content {
   background-color: $grey;
 }
 .title {
@@ -76,6 +77,8 @@ body {
 .breadcrumbs {
   &__inner {
     padding: 45px 0 40px;
+    overflow: hidden;
+    width: 1200px;
   }
   &__list {
     li {
@@ -102,15 +105,18 @@ body {
     }
   }
 }
-.angle-right{
+.angle-right {
   position: relative;
   padding-left: 15px;
-  &::before{
+  &::before {
     content: "\f105";
-    font-family: 'icomoon';
+    font-family: "icomoon";
     position: absolute;
     left: 0;
     color: $green;
     font-size: 14px;
   }
+}
+#modal {
+  display: none;
 }
